--- a/events.html
+++ b/events.html
@@ -8,7 +8,7 @@
   <style>
     body {
       margin: 0;
-      background: #0b1d2a;
+      background: #030d45;
       overflow: hidden;
       font-family: 'Lexend Deca', sans-serif;
     }
