--- a/logging.html
+++ b/logging.html
@@ -13,36 +13,43 @@
       font-family: 'Lexend Deca', sans-serif;
       overflow: hidden;
     }
-    .log-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      height: 90vh;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      z-index: 2;
-    }
-    .log-line {
-      opacity: 0.5;
-      transform: translateY(20px);
-      animation: floatUp 0.8s ease-out forwards;
-      white-space: pre-wrap;
-      margin-bottom: 4px;
-    }
+.log-container {
+  position: absolute;
+  bottom: 150px;
+  left: 16px;
+  width: fit-content;
+  max-height: 70vh;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-start;
+  z-index: 2;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+  padding: 16px;
+  background: rgba(30, 30, 30, 0.9);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  scrollbar-width: thin;
+  scrollbar-color: #555 #333;
+}
+.log-line {
+  opacity: 0.8;
+  transform: translateY(20px);
+  animation: floatUp 0.8s ease-out forwards;
+  white-space: pre-wrap;
+  margin-bottom: 8px;
+  color: #aaffaa;
+}
     @keyframes floatUp {
       to {
         opacity: 1;
         transform: translateY(0);
       }
     }
-    .info { color: #4cc9f0; font-size: 16px; }
-    .warn { color: #f1a208; font-size: 18px; }
-    .error { color: #e63946; font-size: 20px; }
-    .debug { color: #43aa8b; font-size: 14px; }
+.info { color: #add8e6; font-size: 16px; } /* Light blue for info */
+.warn { color: #ffff00; font-size: 18px; } /* Yellow for warn */
+.error { color: #ff6347; font-size: 20px; } /* Orange-Red for error */
+.debug { color: #d3d3d3; font-size: 14px; } /* Light gray for debug */
     .header {
       position: absolute;
       bottom: 40px;
@@ -81,7 +88,7 @@
       'User session started.',
       'Cache miss: regenerating index.',
       'Warning: slow query detected.',
-      'Error: service timeout on /api/metrics',
+      'Service timeout on /api/metrics',
       'Debug mode enabled.',
       'Retrying connection...',
       'Log flushed to disk.',
@@ -106,13 +113,17 @@
       line.className = `log-line ${level}`;
       line.textContent = `[${level.toUpperCase()}] ${text}`;
 
-      logContainer.appendChild(line);
+      if (logContainer.children.length === 0) {
+  logContainer.appendChild(line);
+} else {
+  logContainer.insertBefore(line, logContainer.children[0]);
+}
 
-      logContainer.scrollTop = logContainer.scrollHeight;
+      logContainer.scrollTop = 0;
 
-      if (logContainer.children.length > 80) {
-        logContainer.removeChild(logContainer.children[0]);
-      }
+if (logContainer.children.length > 80) {
+  logContainer.removeChild(logContainer.children[logContainer.children.length - 1]);
+}
     }
 
     setInterval(addLogLine, 400);
