--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<html>  
-<ul>
-  {% assign doclist = site.pages | sort: 'url' %}
-  {% for doc in doclist %}
-    {% if doc.name contains '.html' or doc.name contains '.md' %}
-      <li><a href="{{ site.baseurl }}{{ doc.url }}">{{ doc.url }}</a></li>
-    {% endif %}
-  {% endfor %}
-</ul>
-</html
+---
+layout: default
+title: Directory Index
+---
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>{{ page.title }}</title>
+</head>
+<body>
+  <h1>{{ page.title }}</h1>
+  <ul>
+    {% assign doclist = site.pages | sort: "url" %}
+    {% for doc in doclist %}
+      {% if doc.name contains ".html" or doc.name contains ".md" %}
+        <li><a href="{{ doc.url }}">{{ doc.url }}</a></li>
+      {% endif %}
+    {% endfor %}
+  </ul>
+</body>
+</html>
