--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
 <body>
  
   <ul>
-      <li><a href="telemetry.html"></a></li>
-      <li><a href="telemetry-v2.html"></a></li>
-      <li><a href="events.html"></a></li>
-      <li><a href="events-high-energy.html"></a></li>
-      <li><a href="events-logs-metrics.html"></a></li>
-      <li><a href="logging.html"></a></li>
-      <li><a href="particle.html"></a></li>
-      <li><a href="prims-maze.html"></a></li>
-      <li><a href="prims-weighted-maze.html"></a></li>
-      <li><a href="sliding-window.html"></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
+      <li><a href="telemetry.html">telemetry</a></li>
+      <li><a href="telemetry-v2.html">telemetry-v2</a></li>
+      <li><a href="events.html">events</a></li>
+      <ul>
+        <li><a href="events-high-energy.html">events-high-energy</a></li>
+        <li><a href="events-logs-metrics.html">events-logs-metrics</a></li>
+      </ul>
+      <li><a href="logging.html">logging</a></li>
+      <li><a href="particle.html">particle</a></li>
+      <li><a href="prims-maze.html">prims-maze</a></li>
+      <li><a href="prims-weighted-maze.html">prims-weighted-maze</a></li>
+      <li><a href="sliding-window.html">sliding-window</a></li>
   </ul>
 </body>
 </html>
