Update index.html with life-art

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </ul>
       <li><a href="logging.html">logging</a></li>
       <li><a href="particle.html">particle</a></li>
+      <li><a href="life-art.html">life-art</a></li>
       <li><a href="prims-maze.html">prims-maze</a></li>
       <li><a href="prims-weighted-maze.html">prims-weighted-maze</a></li>
       <li><a href="sliding-window.html">sliding-window</a></li>
